# 2024-q1-arm

./: #count_vowels.py#  #deadthreads1.py#  #executor1.py#  #file_lengths.py#  #file_lengths3.py#  #file_lengths_proc.py#  #min_and_max.py#  #mysum.py#  #mythread.py#  #mythread6.py#  #test_count_vowels.py#  #test_min_and_max.py#  #test_min_and_max_2.py#  #test_person.py#  .#myprog.py  .#person.py  2024-03March-06.ipynb  Untitled.ipynb  arm - 2024-02February-14.html  arm - 2024-02February-14.ipynb  arm - 2024-02February-26.ipynb  arm - 2024-03March-04.ipynb  circle.py  count_vowels.py  deadthreads1.py  deadthreads2.py  executor1.py  executor2.py  executor3.py  executor4.py  file_lengths.py  file_lengths3.py  file_lengths4.py  file_lengths_2.py  file_lengths_proc.py  junkfile-0.txt  junkfile-1.txt  junkfile-2.txt  junkfile-3.txt  junkfile-4.txt  (+25 more)
armtest/: pyproject.toml
armtest/armtest/: hello.py
