[tool.poetry]
name = "armtest"
version = "0.1.0"
description = ""
authors = ["Reuven Lerner <reuven@lerner.co.il>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
